@@ -45,6 +45,10 @@ GNU coreutils NEWS                                    -*- outline -*-
   tail -f again follows changes to a file after it's renamed.
   [bug introduced in coreutils-7.5]
 
+  tail --follow no longer misses changes to files if those files were
+  replaced before inotify watches were created.
+  [bug introduced in coreutils-7.5]
+
 ** New features
 
   chroot accepts the new --skip-chdir option to not change the working directory
